feat: add node plugin configuration
